# mrj

./: .gitattributes  .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml  justfile
.github/: dependabot.yml  mrj.toml
.github/actions/dry-run/: action.yml
.github/workflows/: audit.yml  main.yml  mrj.yml  pr.yml  publish-crates.yml  release-check.yml  release.yml  test.yml
src/: args.rs  auth.rs  config.rs  domain.rs  main.rs  merge.rs  report.rs
src/assets/: banner.txt  sample-config.toml
src/assets/templates/: index.html  run.html
src/merge/: behaviours.rs  execute.rs  log.rs  mod.rs
src/merge/tests/: log.rs
src/report/: data.rs  generate.rs  html.rs  io.rs  mod.rs
src/report/assets/templates/: index.html  run.html
src/report/snapshots/: mrj__report__html__tests__render_report_works_for_builtin_template.snap  mrj__report__html__tests__render_report_works_for_custom_template.snap  mrj__report__io__tests__gather_run_data_works_correctly.snap
src/report/testdata/: custom_template.html
src/report/testdata/rundata/runs/: run-576--sat-nov-01.txt  run-577--sun-nov-02.txt
tests/: config_test.rs  help_test.rs  report_test.rs  run_test.rs
tests/assets/: config-with-invalid-repos.toml  invalid-config.toml  invalid.toml  valid-config-with-all-props.toml  valid-config-with-mandatory-props-only.toml  valid-config-with-no-repos.toml
tests/common/: mod.rs
