[package]
name = "mrj"
version = "0.4.0-alpha.3"
edition = "2024"
authors = ["Dhruv Thakur"]
repository = "https://github.com/dhth/mrj"
description = "mrj merges your open dependency upgrade PRs"
homepage = "https://tools.dhruvs.space/mrj"
license = "MIT"
keywords = [
    "cli",
    "github",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "justfile",
]

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
colored = "3"
futures = "0.3.31"
octocrab = "0.44.1"
open = "5.3.2"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.9.5", features = ["parse"] }

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
insta-cmd = "0.6.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
