[package]
name = "mrj"
version = "0.4.0"
edition = "2024"
authors = ["Dhruv Thakur"]
repository = "https://github.com/dhth/mrj"
description = "mrj merges your open dependency upgrade PRs"
homepage = "https://tools.dhruvs.space/mrj"
license = "MIT"
keywords = [
    "cli",
    "github",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "justfile",
]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3"
futures = "0.3.31"
octocrab = "0.47.1"
open = "5.3.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.9.8", features = ["parse"] }

[dev-dependencies]
insta = { version = "1.44.3", features = ["yaml"] }
insta-cmd = "0.6.0"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
