[package]
name = "mrj"
version = "0.4.0"
edition = "2024"
authors = ["Dhruv Thakur"]
repository = "https://github.com/dhth/mrj"
description = "mrj merges your open dependency upgrade PRs"
homepage = "https://tools.dhruvs.space/mrj"
license = "MIT"
keywords = [
    "cli",
    "github",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "justfile",
]

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.43"
clap = { version = "4.5.56", features = ["derive"] }
colored = "3"
futures = "0.3.31"
octocrab = "0.49.9"
open = "5.3.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
toml = { version = "1.1.2", features = ["parse"] }

[dev-dependencies]
insta = { version = "1.46.2", features = ["yaml"] }
insta-cmd = "0.6.0"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
